# poke-player

./: .gitignore  README.md  pyproject.toml
poke_player/: __init__.py  auto_save.py  cli.py  emulator.py  logging_config.py  pathfinding.py  rom_validator.py  server.py
poke_player/dashboard/: __init__.py  history.py  mount.py
poke_player/dashboard/static/: app.js  index.html  style.css
poke_player/memory/: firered.py  reader.py  red.py
poke_player/state/: builder.py
tests/: __init__.py  conftest.py  test_auto_save.py  test_emulator.py  test_emulator_factory.py  test_firered_reader.py  test_memory_reader.py  test_pathfinding.py  test_rom_validator.py  test_state_builder.py
